--- a/task3/main.css
+++ b/task3/main.css
@@ -47,38 +47,38 @@ body {
 /* service */
 
 .service-title {
-  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  display: flex; /* Використовуйте flex-контейнер для вирівнювання по центру */
   /* Горизонтальне вирівнювання елементів в центрі */
 
-  /* Встановіть колір тексту white */
-  /* Розмір шрифту 42px */
-  /* Товщина шрифту 700*/
-  /* Міжрядковий інтервал normal */
-  /* Зовнішній відступ знизу 32px */
+  color: white; /* Встановіть колір тексту white */
+  font-size: 42px; /* Розмір шрифту 42px */
+  font-weight: 700;/* Товщина шрифту 700*/
+  line-height: normal; /* Міжрядковий інтервал normal */
+  margin-bottom: 32px;/* Зовнішній відступ знизу 32px */
 }
 
 .service-text {
-  /* Використовуйте flex-контейнер для вирівнювання по центру */
-  /* Горизонтальне вирівнювання елементів в центрі */
+  display: flex;/* Використовуйте flex-контейнер для вирівнювання по центру */
+  justify-content: center;/* Горизонтальне вирівнювання елементів в центрі */
 }
 
 .service-article {
-  /* Вирівняйте текст статті по центру */
-  /* Встановіть колір тексту white */
-  /* Розмір шрифту 16px */
-  /* Товщина шрифту 400*/
-  /* Міжрядковий інтервал 26px */
-  /* Зовнішній відступ знизу 40px */
+  justify-content: center;/* Вирівняйте текст статті по центру */
+  color: white;/* Встановіть колір тексту white */
+  font-size: 16px;/* Розмір шрифту 16px */
+  font-weight: 400;/* Товщина шрифту 400*/
+  line-height: 26px;/* Міжрядковий інтервал 26px */
+  margin-bottom: 40px;/* Зовнішній відступ знизу 40px */
 }
 
 .service-items {
-  /* Використовуйте flex-контейнер для вирівнювання по центру */
-  /* Горизонтальне вирівнювання елементів в центрі */
+  display: flex;/* Використовуйте flex-контейнер для вирівнювання по центру */
+  justify-content: center;/* Горизонтальне вирівнювання елементів в центрі */
   /* Встановіть проміжок між елементами 30px не через margin ta padding */
 }
 
 .service-item {
-  /* Використовуйте flex-контейнер для вирівнювання по центру */
+  display: flex;/* Використовуйте flex-контейнер для вирівнювання по центру */
   /* Розташовуйте дочірні елементи в стовпчик */
   /* Вирівнюйте елементи по центру по вертикалі */
   /* Вирівнюйте елементи по центру по горизонталі */
@@ -93,36 +93,36 @@ body {
 
   /* Shadow  */
   box-shadow: 0px 22px 18px 0px rgba(0, 0, 0, 0.05);
-  /* Внутрішній відступ 20px ta 40 px*/
+  padding: 20px ta 40px;/* Внутрішній відступ 20px ta 40 px*/
 }
 
 .service-item-icon {
-  /* Зовнішній відступ 18px */
+  margin: 18px;/* Зовнішній відступ 18px */
 }
 
 .service-item-title {
-  /* Зовнішній відступ 18px */
-  /* Встановіть колір тексту white */
-  /* Розмір шрифту 24px */
-  /* Товщина шрифту 500*/
-  /* Міжрядковий інтервал normal */
+  margin: 18px;/* Зовнішній відступ 18px */
+  color: white;/* Встановіть колір тексту white */
+  font-size: 24px;/* Розмір шрифту 24px */
+  font-weight: 500;/* Товщина шрифту 500*/
+  line-height: normal;/* Міжрядковий інтервал normal */
 }
 
 .service-item-article {
-  /* Зовнішній відступ снизу 24px */
-  /* Встановіть колір тексту white */
-  /* Розмір шрифту 16px */
-  /* Товщина шрифту 400*/
-  /* Міжрядковий інтервал 26px */
-  /* Вирівнюйте текст по лівому краю (text-align)*/
+  margin-bottom: 24px;/* Зовнішній відступ снизу 24px */
+  color: white;/* Встановіть колір тексту white */
+  font-size: 16px;/* Розмір шрифту 16px */
+  font-weight: 400;/* Товщина шрифту 400*/
+  line-height: 26px;/* Міжрядковий інтервал 26px */
+  text-align: left;/* Вирівнюйте текст по лівому краю (text-align)*/
 }
 
 .service-item-link {
-  /* Використовуйте flex-контейнер для вирівнювання по центру */
-  /* Відмініть оформлення підкреслення для посилання */
+  display: flex;/* Використовуйте flex-контейнер для вирівнювання по центру */
+  font-style: unset;/* Відмініть оформлення підкреслення для посилання */
 }
 
 .service-item-link span {
-  /* Встановіть колір тексту white */
-  /* Зовнішній відступ справа 8px */
+  color: white;/* Встановіть колір тексту white */
+  margin-right: 8px;/* Зовнішній відступ справа 8px */
 }
